--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,17 @@ services:
     volumes: 
       - ./backend:/home/node/app
     command: npm start
+  db_mysql:
+    image: mysql:latest
+    volumes:
+      - ./database/mysql:/var/lib/mysql/
+    restart: always
+    environment:
+      MYSQL_DATABASE: maindb
+      MYSQL_USER: dbuser
+      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 33068:3306
+    expose: 
+      - 33068
