--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nanoid": "^5.0.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "express-session": "^1.17.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0"
   }
 }
