--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon --legacy-watch ./index.js"
   },
-  "author": "Roger",
+  "author": "Roger Reyes",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
